--- a/TestTaskCalculator/TestTaskCalculator.csproj
+++ b/TestTaskCalculator/TestTaskCalculator.csproj
@@ -50,6 +50,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HomeControllerTest.cs" />
+    <Compile Include="OddSequenceTest.cs" />
+    <Compile Include="SequenceTest.cs" />
+    <Compile Include="EvenSequenceTest.cs" />
+    <Compile Include="CSequenceTest.cs" />
+    <Compile Include="ESequenceTest.cs" />
+    <Compile Include="FibonacciSequenceTest.cs" />
+    <Compile Include="ZSequenceTest.cs" />
     <Compile Include="ValidatorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
