--- a/TaskCalculator/TaskCalculator.csproj
+++ b/TaskCalculator/TaskCalculator.csproj
@@ -196,6 +196,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Instruction.cshtml" />
+    <Content Include="Views\Home\Sequence.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
